Fully working quests, dragon, rewards and distribution