@@ -1,7 +1,9 @@
 package org.celestialcraft.cCUtilities.modules.quests.util;
 
 import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.format.TextDecoration;
 import net.kyori.adventure.text.minimessage.MiniMessage;
+import net.kyori.adventure.text.serializer.plain.PlainTextComponentSerializer;
 import org.bukkit.NamespacedKey;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
@@ -9,8 +11,9 @@ import org.bukkit.inventory.meta.ItemMeta;
 import org.bukkit.persistence.PersistentDataType;
 import org.celestialcraft.cCUtilities.CCUtilities;
 import org.celestialcraft.cCUtilities.modules.quests.model.Quest;
+import org.celestialcraft.cCUtilities.modules.quests.model.QuestType;
 
-import java.util.Collections;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
 
@@ -18,6 +21,7 @@ public class LoreUtils {
 
     private static final NamespacedKey questKey = new NamespacedKey(CCUtilities.getInstance(), "quest_item");
     private static final MiniMessage mm = MiniMessage.miniMessage();
+    private static final PlainTextComponentSerializer plain = PlainTextComponentSerializer.plainText();
 
     public static boolean isQuestItem(ItemStack item) {
         if (item == null || !item.hasItemMeta()) return false;
@@ -38,18 +42,98 @@ public class LoreUtils {
         ItemMeta meta = item.getItemMeta();
         if (meta == null) return;
 
-        String typeFormatted = capitalizeWords(quest.getType().name().toLowerCase().replace('_', ' '));
-        String progressText = "<gray>" + typeFormatted + " <#c1adfe>" + quest.getProgress() + " <gray>/ <#c1adfe>" + quest.getTarget();
+        String label = formatQuestLabel(quest);
+        String newLine = String.format(
+                "<gray>%s:</gray> <#c1adfe>%d</#c1adfe><gray>/</gray><#c1adfe>%d</#c1adfe>",
+                label, quest.getProgress(), quest.getTarget()
+        );
+        Component newComp = mm.deserialize(newLine).decoration(TextDecoration.ITALIC, false);
 
-        Component formattedLore = mm.deserialize(progressText);
-        meta.lore(Collections.singletonList(formattedLore));
+        List<Component> existing = meta.lore();
+        List<Component> out = new ArrayList<>();
+
+        if (existing != null) {
+            for (Component c : existing) {
+                String txt = normalize(plain.serialize(c));
+                if (isProgressLike(txt) || startsWithAnyLabel(txt, List.of(label))) continue;
+                out.add(c);
+            }
+        }
+
+        out.add(newComp);
+        meta.lore(out);
+        item.setItemMeta(meta);
+    }
+
+    public static void updateLoreMultiple(ItemStack item, List<Quest> quests) {
+        if (item == null || !item.hasItemMeta()) return;
+        ItemMeta meta = item.getItemMeta();
+        if (meta == null) return;
+
+        List<String> labels = new ArrayList<>();
+        for (Quest q : quests) labels.add(formatQuestLabel(q));
+
+        List<Component> existing = meta.lore();
+        List<Component> preserved = new ArrayList<>();
+
+        if (existing != null) {
+            for (Component c : existing) {
+                String txt = normalize(plain.serialize(c));
+                if (isProgressLike(txt) || startsWithAnyLabel(txt, labels)) continue;
+                preserved.add(c);
+            }
+        }
+
+        List<Component> out = new ArrayList<>(preserved);
+        for (Quest q : quests) {
+            String label = formatQuestLabel(q);
+            String line = String.format(
+                    "<gray>%s:</gray> <#c1adfe>%d</#c1adfe><gray>/</gray><#c1adfe>%d</#c1adfe>",
+                    label, q.getProgress(), q.getTarget()
+            );
+            out.add(mm.deserialize(line).decoration(TextDecoration.ITALIC, false));
+        }
+
+        meta.lore(out);
         item.setItemMeta(meta);
     }
 
     public static void sendProgressActionBar(Player player, Quest quest) {
-        String typeFormatted = capitalizeWords(quest.getType().name().toLowerCase().replace('_', ' '));
-        String progressText = "<gray>" + typeFormatted + " <#c1adfe>" + quest.getProgress() + " <gray>/ <#c1adfe>" + quest.getTarget();
-        player.sendActionBar(mm.deserialize(progressText));
+        String label = formatQuestLabel(quest);
+        String line = String.format(
+                "<gray>%s:</gray> <#c1adfe>%d</#c1adfe><gray>/</gray><#c1adfe>%d</#c1adfe>",
+                label, quest.getProgress(), quest.getTarget()
+        );
+        player.sendActionBar(mm.deserialize(line).decoration(TextDecoration.ITALIC, false));
+    }
+
+    private static String formatQuestLabel(Quest q) {
+        String target = q.getTargetItem();
+        String targetPretty = (target == null || target.isBlank())
+                ? null
+                : capitalizeWords(target.toLowerCase().replace('_', ' '));
+        QuestType type = q.getType();
+        return switch (type) {
+            case KILL_MOBS -> targetPretty != null ? "Kill " + pluralize(targetPretty) : "Kill Mobs";
+            case MINE_BLOCK -> targetPretty != null ? "Mine " + pluralize(targetPretty) : "Mine Blocks";
+            case PLACE_BLOCKS -> targetPretty != null ? "Place " + pluralize(targetPretty) : "Place Blocks";
+            case SMELT_ITEMS -> targetPretty != null ? "Smelt " + pluralize(targetPretty) : "Smelt Items";
+            case HARVEST_CROPS -> targetPretty != null ? "Harvest " + targetPretty : "Harvest Crops";
+            case BREED_ANIMALS -> targetPretty != null ? "Breed " + pluralize(targetPretty) : "Breed Animals";
+            case DISCOVER_BIOME -> targetPretty != null ? "Discover " + targetPretty : "Discover Biome";
+            case RUN_DISTANCE -> "Run Distance";
+            case SWIM_DISTANCE -> "Swim Distance";
+            case ELYTRA_GLIDE -> "Elytra Glide";
+            case DAMAGE_MOBS -> "Deal Damage";
+            case GAIN_EXPERIENCE -> "Gain Experience";
+        };
+    }
+
+    private static String pluralize(String s) {
+        if (s == null || s.isEmpty()) return s;
+        char last = Character.toLowerCase(s.charAt(s.length() - 1));
+        if (last == 's') return s;
+        return s + "s";
     }
 
     private static String capitalizeWords(String input) {
@@ -63,22 +147,45 @@ public class LoreUtils {
         }
         return builder.toString().trim();
     }
+
     public static UUID getQuestId(ItemStack item) {
         if (item == null || !item.hasItemMeta() || item.getItemMeta() == null) return null;
-
-        List<String> lore = item.getItemMeta().getLore();
+        List<Component> lore = item.getItemMeta().lore();
         if (lore == null || lore.isEmpty()) return null;
-
-        for (String line : lore) {
+        for (Component c : lore) {
+            String line = plain.serialize(c);
             if (line.contains("Quest ID:")) {
                 String idPart = line.substring(line.indexOf("Quest ID:") + 9).trim();
-                try {
-                    return UUID.fromString(idPart);
-                } catch (IllegalArgumentException e) {
-                    return null;
-                }
+                try { return UUID.fromString(idPart); }
+                catch (IllegalArgumentException e) { return null; }
             }
         }
         return null;
+    }
+
+    private static boolean isProgressLike(String plainTextLine) {
+        if (plainTextLine == null) return false;
+        String line = normalize(plainTextLine);
+        if (line.matches("(?i)^[^:\\[]+:\\s*\\d+\\s*/\\s*\\d+\\s*$")) return true;
+        return line.matches("(?i)^[^:\\[]+\\s*\\[\\s*\\d+\\s*/\\s*\\d+\\s*]\\s*$");
+    }
+
+    private static boolean startsWithAnyLabel(String plainTextLine, List<String> labels) {
+        if (plainTextLine == null) return false;
+        String line = normalize(plainTextLine).toLowerCase();
+        for (String lbl : labels) {
+            String l = normalize(lbl).toLowerCase();
+            if (line.startsWith(l)) return true;
+        }
+        return false;
+    }
+
+    private static String normalize(String s) {
+        if (s == null) return "";
+        String out = s.trim();
+        out = out.replace('\u00A0', ' ');
+        out = out.replaceAll("^[\\-–—•*>\\s]+", "");
+        out = out.replaceAll("\\s+", " ");
+        return out;
     }
 }
